新增成員資訊及照片，修改版型

--- a/index2.html
+++ b/index2.html
@@ -70,10 +70,6 @@
       position: relative;
       overflow: hidden;
       box-sizing: border-box;
-      font-family: 'Noto Sans TC', 'Microsoft JhengHei', sans-serif;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
-      padding: 10px;
-      line-height: 1.2;
     }
 
     .link-button img {
@@ -210,13 +206,10 @@
     }
 
     .member-title {
-      font-size: clamp(24px, 6vw, 50px);
-      color: #4be9de;
+      font-size: clamp(24px, 3vw, 32px);
+      color: #c71585;
       margin-bottom: 20px;
       display: none;
-      font-family: 'Noto Sans TC', 'Microsoft JhengHei', sans-serif;
-      font-weight: bold;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.5);      
     }
 
     .active .member-title {
@@ -287,8 +280,8 @@
       </div>
       <div class="social-icons">
         <a href="https://www.instagram.com/4.iiouk/" target="_blank"><img src="./ig.png"></a>
-        <!-- <a><img src="./youtube.png"></a>
-        <a><img src="./twitch.png"></a> -->
+        <a><img src="./youtube.png"></a>
+        <a><img src="./twitch.png"></a>
       </div>
     </div>
     <div class="card">
