修改照片比例&Lillian名稱顯示

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         <img src="lillian.jpg" alt="profile A" class="profile-img">
       </div>
       <div class="text-content">
-        <span>莉恩</span>
+        <span>Lillian</span>
       </div>
       <div class="social-icons">
         <a href="https://www.instagram.com/4.iiouk/" target="_blank"><img src="./ig.png"></a>
