--- a/index.html
+++ b/index.html
@@ -293,15 +293,15 @@
     </div>
     <div class="card">
       <div class="image-container">
-        <img src="https://via.placeholder.com/100" alt="profile A" class="profile-img">
+        <img src="yating.png" alt="profile A" class="profile-img">
       </div>
       <div class="text-content">
-        <span>天天</span>
+        <span>雅廷</span>
       </div>
       <div class="social-icons">
-        <a><img src="./ig.png"></a>
-        <a><img src="./youtube.png"></a>
-        <a><img src="./twitch.png"></a>
+        <a href="https://www.instagram.com/yaa.tiiiing__/" target="_blank"><img src="./ig.png"></a>
+        <!-- <a><img src="./youtube.png"></a>
+        <a><img src="./twitch.png"></a> -->
       </div>
     </div>
     <div class="card">
